@@ -22,49 +22,59 @@ package extensibility.handlers;
 /**
  * Convenience base class which all handler implementations extend. This class
  * provides the common properties required by all MergeHandler implemenations.
+ * 
  * @author jfischer
  */
 public abstract class BaseHandler implements MergeHandler, Comparable<Object> {
 
-    protected int priority;
-    protected String xpath;
-    protected MergeHandler[] children = {};
-    protected String name;
+	protected int priority;
+	protected String xpath;
+	protected MergeHandler[] children = {};
+	protected String name;
 
-    public int getPriority() {
-        return priority;
-    }
+	@Override
+	public int getPriority() {
+		return priority;
+	}
 
-    public String getXPath() {
-        return xpath;
-    }
+	@Override
+	public String getXPath() {
+		return xpath;
+	}
 
-    public void setPriority(int priority) {
-        this.priority = priority;
-    }
+	@Override
+	public void setPriority(int priority) {
+		this.priority = priority;
+	}
 
-    public void setXPath(String xpath) {
-        this.xpath = xpath;
-    }
+	@Override
+	public void setXPath(String xpath) {
+		this.xpath = xpath;
+	}
 
-    public int compareTo(Object arg0) {
-        return new Integer(getPriority()).compareTo(new Integer(((MergeHandler) arg0).getPriority()));
-    }
+	@Override
+	public int compareTo(Object arg0) {
+		return Integer.valueOf(getPriority()).compareTo(Integer.valueOf(((MergeHandler) arg0).getPriority()));
+	}
 
-    public MergeHandler[] getChildren() {
-        return children;
-    }
+	@Override
+	public MergeHandler[] getChildren() {
+		return children;
+	}
 
-    public void setChildren(MergeHandler[] children) {
-        this.children = children;
-    }
+	@Override
+	public void setChildren(MergeHandler[] children) {
+		this.children = children;
+	}
 
-    public String getName() {
-        return name;
-    }
+	@Override
+	public String getName() {
+		return name;
+	}
 
-    public void setName(String name) {
-        this.name = name;
-    }
+	@Override
+	public void setName(String name) {
+		this.name = name;
+	}
 
 }
